<resources>
    <string name="app_name">TMDb</string>
    <string name="release_date">Data de estréia:</string>
    <string name="something_wrong">Algo de errado aconteceu, por favor, tente novamente!</string>
    <string name="title">Título:</string>
    <string name="overview">Visão geral:</string>
    <string name="runtime">Tempo de duração</string>
    <string name="budget">Orçamento</string>
    <string name="revenue">Receita</string>
    <string name="genres">Generos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_warning">Parece que você está sem internet, conecte-se e tente novamente</string>
</resources>